# MasterHttpRelayVPN-Frankestein

./: .gitignore  Cargo.toml  README.md  SF_README.md  build-windows-exe.bat  build-windows-installer.ps1  config.direct.example.json  config.example.json  config.fronting-groups.example.json  config.full.example.json  config.google-only.example.json  elevation_audit_roadmap_source.md
.github/: release-drafter.yml
.github/scripts/: telegram_release_notify.py
.github/workflows/: ci.yml  prepare-release.yml  release-drafter.yml  release.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/farnam/mhrvf/: CaInstall.kt  ConfigStore.kt  MainActivity.kt  MhrvApp.kt  MhrvVpnService.kt  Native.kt  NetworkDetect.kt  ReadinessIds.kt  VpnState.kt
android/app/src/main/java/com/farnam/mhrvf/ui/: AppPickerDialog.kt  ConfigSharing.kt  HomeScreen.kt
android/app/src/main/java/com/farnam/mhrvf/ui/theme/: Theme.kt
android/app/src/main/java/com/github/shadowsocks/bg/: Tun2proxy.kt
android/app/src/main/java/com/therealaleph/mhrv/: CaInstall.kt  ConfigStore.kt  MainActivity.kt  MhrvVpnService.kt  Native.kt  VpnState.kt
android/app/src/main/java/com/therealaleph/mhrv/ui/: HomeScreen.kt
android/app/src/main/java/com/therealaleph/mhrv/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/values-fa/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
android/app/src/test/java/com/farnam/mhrvf/: ConfigStoreTest.kt
assets/apps_script/: Code.gs  CodeCloudflareWorker.gs  CodeFull.gs  README.md
assets/apps_script/tests/: batch_fallback_test.js  compat_marker_test.js  edge_dns_test.js
assets/launchers/: run.bat  run.command  run.sh
assets/macos/: Info.plist  build-app.sh
assets/openwrt/: mhrv-f.init
assets/windows/: install-mhrv-f.ps1  uninstall-mhrv-f.ps1
docs/: RELEASE_NOTES.md  advanced-options.fa.md  advanced-options.md  android.fa.md  android.md  audit.md  cfw-reference-audit.md  cloudflare-worker-json-relay.md  desktop-installer.md  doctor.fa.md  doctor.md  field-notes.md  forum-cleaned.fa.md  fronting-groups.md  glossary.fa.md  glossary.md  index.fa.md  index.md  netlify-json-relay.md  netlify-xhttp-relay.md  optional-extensions.md  platform-alternatives.md  readiness-matrix.md  relay-modes.md  release-checklist.md  safety-security.fa.md  safety-security.md  sharing-and-per-app-routing.md  troubleshooting.fa.md  troubleshooting.md  udpgw.fa.md  udpgw.md  ui-desktop.fa.md  ui-desktop.md  vercel-json-relay.md  vercel-xhttp-relay.fa.md  vercel-xhttp-relay.md
docs/changelog/: v1.2.14.md  v1.2.6.md  v1.2.9.md
releases/: README.md
src/: android_jni.rs  branding.rs  cache.rs  cert_installer.rs  config.rs  data_dir.rs  doctor.rs  domain_fronter.rs  lib.rs  main.rs  mitm.rs  policy.rs  profiles.rs  proxy_server.rs  readiness.rs  relay_transport.rs  response_quality.rs  rlimit.rs  scan_ips.rs  scan_sni.rs  status_api.rs  support_bundle.rs  test_cmd.rs  tunnel_client.rs  update_check.rs  vercel_edge.rs  xhttp_cloud_deploy.rs
tools/: README.md  check-doc-links.py  check-repo-cleanliness.py  generate-readiness-contract.ps1
tools/cloudflare-worker-json-relay/: README.md  package.json  worker.js
tools/netlify-json-relay/: README.md  netlify.toml  package.json
tools/netlify-json-relay/netlify/edge-functions/: api.js
tools/netlify-json-relay/public/: index.html
tools/netlify-xhttp-relay/: README.md  netlify.toml  package.json
tools/netlify-xhttp-relay/netlify/edge-functions/: relay.js
tools/netlify-xhttp-relay/public/: index.html  vless-generator.html
tools/vercel-json-relay/: README.md  package.json  vercel.json
tools/vercel-json-relay/api/: api.js
tools/vercel-xhttp-relay/: README.md  package.json  vercel.json
tools/vercel-xhttp-relay-node/: README.md  package.json  vercel.json
tools/vercel-xhttp-relay-node/api/: index.js
tunnel-node/: Dockerfile  README.md  mhrv-tunnel-node.service.example
tunnel-node/src/: main.rs  udpgw.rs
