[package]
name = "mhrv-f"
version = "1.2.13"
edition = "2021"
description = "MasterHttpRelayVPN-Frankestein (mhrv-f): unified Apps Script relay client with SNI fronting and desktop/Android builds"
license = "MIT"

[lib]
name = "mhrv_jni"
path = "src/lib.rs"
# `cdylib` lets the Android app dlopen libmhrv_jni.so via System.loadLibrary.
# `rlib` keeps the desktop binaries linking normally — same .rlib is used
# for `mhrv-f` and `mhrv-f-ui` builds on macOS/Linux/Windows.
# Lib name avoids `mhrv_f`: the `mhrv-f` binary's MSVC PDB stem matches `mhrv_f`,
# which makes Cargo warn about `mhrv_f.pdb` collisions on Windows release builds.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mhrv-f"
path = "src/main.rs"

[[bin]]
name = "mhrv-f-ui"
path = "src/bin/ui.rs"
required-features = ["ui"]

[features]
default = []
ui = ["dep:eframe", "dep:reqwest", "dep:zip"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "signal", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls-pki-types = "1"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
base64 = "0.22"
bytes = "1"
httparse = "1"
rand = "0.8"
h2 = "0.4"
http = "1"
flate2 = "1"
directories = "5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# 64-bit atomics on 32-bit MIPS/ARMv5 targets. Rust's std AtomicU64 is
# only available on targets that expose native 64-bit atomics, which
# mipsel-unknown-linux-musl does not — `AtomicU64` resolves to "no
# such name in sync::atomic" and the whole crate fails to build. The
# `fallback` feature uses a global spinlock when the target can't do
# 64-bit atomically; on x86_64 / aarch64 / armv7 / etc. it compiles
# down to the native instructions with no overhead.
portable-atomic = { version = "1", features = ["fallback"] }

# Optional UI dep: only pulled in when --features ui is set.
# Both `glow` (OpenGL 2+) and `wgpu` (DX12/Vulkan/Metal) are compiled in;
# the binary picks one at startup — glow by default for compat with the
# egui look-and-feel we've been shipping, but falls back to wgpu when
# `MHRV_RENDERER=wgpu` is set. On older Windows
# hardware / RDP / VMs without OpenGL 2.0, glow can crash with
# `egui_glow requires opengl 2.0+` — the wgpu backend uses DX12/Vulkan
# instead and covers those boxes.
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "wgpu",
    "persistence",
], optional = true }
reqwest = { version = "0.12", default-features = false, optional = true, features = ["json", "blocking", "rustls-tls"] }
zip = { version = "2", default-features = false, optional = true, features = ["deflate"] }
url = "2.5.8"

# Unix-only deps. Must come after `[dependencies]` because starting a new
# table here otherwise ends the main one — anything below it (incl. eframe)
# would end up scoped to cfg(unix) and disappear on Windows builds.
# libc is referenced for the RLIMIT_NOFILE bump (OpenWRT routers
# often ship a very low fd limit that fills up fast under browser load). Already
# pulled in transitively via tokio, so zero new weight.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Android-only deps: jni gives us the extern "system" wrappers used in
# src/android_jni.rs; zero cost on any other platform because the whole
# module is `#[cfg(target_os = "android")]`.
#
# tun2proxy is the TUN <-> SOCKS5 bridge — it reads raw IP packets from the
# fd VpnService hands us, runs a userspace TCP/IP stack (smoltcp under the
# hood), and funnels every TCP/UDP flow through our local SOCKS5. Without
# this, VpnService establishes a TUN device nothing reads from and all
# traffic black-holes (symptom: Chrome shows DNS_PROBE_STARTED).
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
tun2proxy = { version = "0.7", default-features = false, features = ["udpgw"] }

# Temporary patch: adds udpgw_server parameter to the Android JNI `run()`
# function. Remove once tun2proxy >= 0.8 ships with that signature.
[patch.crates-io]
tun2proxy = { git = "https://github.com/yyoyoian-pixel/tun2proxy", branch = "feat/udpgw-jni-param" }

[dev-dependencies]
# Used in mitm tests to sanity-check the cert extensions we emit.
x509-parser = "0.16"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
